sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: not found: value temp
    while (j > 0 & (!isSmallerThan(j-1,temp))) {
                                       ^AlgInsertionSort:10: error: not found: value temp
    setValue(j,temp)
               ^